--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,4 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/why-serverless:$SHORT_SHA']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['beta', 'run', 'deploy', 'why-serverless', '--image=gcr.io/$PROJECT_ID/why-serverless:$SHORT_SHA', '--region=europe-west1', '--platform=managed', '--allow-unauthenticated', '--concurrency=10']
+  args: ['beta', 'run', 'deploy', 'why-serverless', '--image=gcr.io/$PROJECT_ID/why-serverless:$SHORT_SHA', '--region=europe-west1', '--platform=managed', '--allow-unauthenticated', '--concurrency=10', '--set-env-vars=MYSECRET=berglas://why-serverless/my-secret']
